# NYC_Parking_Tickets

./: .sconsign.dblite  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
NYC_Parking_Tickets/: __init__.py  dataset.py  features.py  plots.py
NYC_Parking_Tickets/modeling/: predict.py  train.py
docs/: README.md  Ways_to_explain_variance_in_ticket_count  mkdocs.yml  untitled.txt
docs/docs/: index.md
notebooks/: 1- Clean Weather.ipynb  1- clean_weather.ipynb  2- Clean Parking.ipynb  2- clean_dates.ipynb  2- clean_dates_tix.ipynb  3- Clean Parking Datatypes.ipynb  3- clean_dtypes_tix.ipynb  3- proper_dtypes.ipynb  4- Filter Violations and Aggregate by Day.ipynb  5- Join Weather and Daily Count Data.ipynb  6- Exploratory Analysis and Feature Engineering.ipynb  7- Data Quality Check- Jan 5 2018 blizzard .ipynb  8- Join_data_hourly.ipynb  Exclude Holidays and Sundays.ipynb  Exploration and feature engineering.ipynb  Jan 5 2018 blizzard not showing up as precipitation- data quality check.ipynb  SConstruct  Untitled.ipynb  join_data.ipynb  temp_clean.csv  tix_per_day.ipynb
